// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetAnchor renders 0 1`] = `
Array [
  .c0 {
  offset-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders function 1`] = `
Array [
  .c0 {
  offset-anchor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders negative number 1`] = `
Array [
  .c0 {
  offset-anchor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-anchor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-anchor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-anchor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-anchor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-anchor: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-anchor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-anchor: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    offset-anchor: July;
  }
}

@media April {
  .c0 {
    offset-anchor: August;
  }
}

@media January {
  .c0 {
    offset-anchor: September;
  }
}

@media April {
  .c0 {
    offset-anchor: November;
  }
}

@media June {
  .c0 {
    offset-anchor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-anchor: July;
  }
}

@media April {
  .c0 {
    offset-anchor: August;
  }
}

@media January {
  .c0 {
    offset-anchor: September;
  }
}

@media April {
  .c0 {
    offset-anchor: November;
  }
}

@media June {
  .c0 {
    offset-anchor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-anchor: January;
  }
}

@media April {
  .c0 {
    offset-anchor: December;
  }
}

@media January {
  .c0 {
    offset-anchor: April;
  }
}

@media April {
  .c0 {
    offset-anchor: May;
  }
}

@media June {
  .c0 {
    offset-anchor: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-anchor: January;
  }
}

@media April {
  .c0 {
    offset-anchor: December;
  }
}

@media January {
  .c0 {
    offset-anchor: April;
  }
}

@media April {
  .c0 {
    offset-anchor: May;
  }
}

@media June {
  .c0 {
    offset-anchor: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders postitive number 1`] = `
Array [
  .c0 {
  offset-anchor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders string 1`] = `
Array [
  .c0 {
  offset-anchor: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetAnchor renders valid theme path 1`] = `
Array [
  .c0 {
  offset-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
